--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
    <section class="hero-section">
       <h1 class="hero-name">Effective Solutions for Your Business</h1>
       <button class="button-hero" type="button">Order Service</button>
-    </section>
-</div>
+    </div>
+  </section>
+
     <!--feature section-->
     <section class="feature-section">
       <div class="container">
@@ -122,8 +123,10 @@
   </main>
   <!--footer-->
   <footer class="footer">
-    <a class="logo-footer" href="./index.html">Web <span class="footer-studio">Studio</span></a>
+    <div class="container">
+<a class="logo-footer" href="./index.html">Web <span class="footer-studio">Studio</span></a>
     <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
   </footer>
+    </div>
   </body>
 </html>
