--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,80 @@
     <title>WebStudio</title>
   </head>
   <body>
-   
+    <!--header-->
+    <header class="header">
+      <div class="container header-container">
+         <nav class="navigation">
+        <a class="logo-nav" href="./index.html">Web<span class="logo-studio-nav">Studio</span></a>
+        <ul class="nav-list">
+          <li class="nav-item"><a class="nav-links" href="./index.html">Studio</a></li>
+          <li class="nav-item"><a class="nav-links" href="./portfolio.html">Portfolio</a></li>
+          <li class="nav-item"><a class="nav-links" href="">Contacts</a></li>
+        </ul>
+      </nav>
+      <address class="address">
+        <ul class="address-list">
+          <li class="address-item"><a class="address-links" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="address-item"><a class="address-links" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
+    </div>
+    </header>
+    <main>
+    <!--portfolio-->
+    <section class="portfolio">
+      <h2 class="portfolio-name">Our Portfolio</h2>
+    <ul class="portfolio-list">
+      <li class="portfolio-item">
+        <img class="portfolio-img"  src="./images/img-5.jpg" alt="Banking App">
+        <div class="cards"> 
+          <h3  class="portfolio-list-name">Banking App</h3>
+        <p class="portfolio-list-text">App</p>
+      </div>
+      </li>
+      <li class="portfolio-item">
+        <img class="portfolio-img" src="./images/img-6.jpg" alt="Cashless Payment">
+        <div class="cards">
+          <h3 class="portfolio-list-name">Cashless Payment</h3>
+        <p class="portfolio-list-text">Marketing</p>
+      </div>
+      </li>
+      <li class="portfolio-item">
+        <imgclass="portfolio-img"  src="./images/img-7.jpg" alt="Meditation App">
+        <div class="cards">
+          <h3 class="portfolio-list-name">Meditation App</h3>
+        <p class="portfolio-list-text">App</p>
+      </div>
+      </li>
+      <li class="portfolio-item">
+        <img class="portfolio-img" src="./images/img-8.jpg" alt="Taxi Service">
+        <div class="cards"> 
+          <h3 class="portfolio-list-name">Taxi Service</h3>
+        <p class="portfolio-list-text">Marketing</p>
+      </div>
+      </li>
+      <li class="portfolio-item">
+        <img class="portfolio-img" src="./images/img-9.jpg" alt="Screen Illustrations">
+        <div class="cards">
+          <h3 class="portfolio-list-name">Screen Illustrations</h3>
+        <p class="portfolio-list-text">Design</p>
+      </div>
+      </li>
+      <li class="portfolio-item">
+        <img class="portfolio-img" src="./images/img-10.jpg" alt="Online Courses">
+        <div class="cards"></div>
+        <h3 class="portfolio-list-name">Online Courses</h3>
+        <p class="portfolio-list-text">Marketing</p>
+      </li>
+    </ul>
+    </section>
+    </main>
+    <!--footer-->
+  <footer class="footer">
+    <div class="container">
+<a class="logo-footer" href="./index.html">Web <span class="footer-studio">Studio</span></a>
+    <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+  </footer>
+    </div>
   </body>
 </html>
