--- a/portfolio.html
+++ b/portfolio.html
@@ -36,6 +36,7 @@
     <main>
     <!--portfolio-->
     <section class="portfolio">
+      <div class="container">
       <h2 class="portfolio-name">Our Portfolio</h2>
     <ul class="portfolio-list">
       <li class="portfolio-item">
@@ -75,11 +76,13 @@
       </li>
       <li class="portfolio-item">
         <img class="portfolio-img" src="./images/img-10.jpg" alt="Online Courses">
-        <div class="cards"></div>
+        <div class="cards">
         <h3 class="portfolio-list-name">Online Courses</h3>
         <p class="portfolio-list-text">Marketing</p>
+      </div>
       </li>
     </ul>
+  </div>
     </section>
     </main>
     <!--footer-->
