--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a class="logo-nav" href="./index.html">Web<span class="logo-studio-nav">Studio</span></a>
       <ul class="nav-list">
         <li class="nav-item"><a class="nav-links" href="./index.html">Studio</a></li>
-        <li class="nav-item"><a class="nav-links" href="./portfolio.html">Portfolio</a></li>
+        <li class="nav-item"><a class="nav-links" href="">Portfolio</a></li>
         <li class="nav-item"><a class="nav-links" href="">Contacts</a></li>
       </ul>
     </nav>
@@ -115,6 +115,56 @@
         </li>
       </ul>
     </div>
+    </section>
+    <!--portfolio-->
+    <section class="portfolio">
+      <div class="container">
+      <h2 class="portfolio-name">Our Portfolio</h2>
+    <ul class="portfolio-list">
+      <li class="portfolio-item">
+        <img class="portfolio-img"  src="./images/img-5.jpg" alt="Banking App">
+        <div class="cards"> 
+          <h3  class="portfolio-list-name">Banking App</h3>
+        <p class="portfolio-list-text">App</p>
+      </div>
+      </li>
+      <li class="portfolio-item">
+        <img class="portfolio-img" src="./images/img-6.jpg" alt="Cashless Payment">
+        <div class="cards">
+          <h3 class="portfolio-list-name">Cashless Payment</h3>
+        <p class="portfolio-list-text">Marketing</p>
+      </div>
+      </li>
+      <li class="portfolio-item">
+        <imgclass="portfolio-img"  src="./images/img-7.jpg" alt="Meditation App">
+        <div class="cards">
+          <h3 class="portfolio-list-name">Meditation App</h3>
+        <p class="portfolio-list-text">App</p>
+      </div>
+      </li>
+      <li class="portfolio-item">
+        <img class="portfolio-img" src="./images/img-8.jpg" alt="Taxi Service">
+        <div class="cards"> 
+          <h3 class="portfolio-list-name">Taxi Service</h3>
+        <p class="portfolio-list-text">Marketing</p>
+      </div>
+      </li>
+      <li class="portfolio-item">
+        <img class="portfolio-img" src="./images/img-9.jpg" alt="Screen Illustrations">
+        <div class="cards">
+          <h3 class="portfolio-list-name">Screen Illustrations</h3>
+        <p class="portfolio-list-text">Design</p>
+      </div>
+      </li>
+      <li class="portfolio-item">
+        <img class="portfolio-img" src="./images/img-10.jpg" alt="Online Courses">
+        <div class="cards">
+        <h3 class="portfolio-list-name">Online Courses</h3>
+        <p class="portfolio-list-text">Marketing</p>
+      </div>
+      </li>
+    </ul>
+  </div>
     </section>
   </main>
   <!--footer-->
