--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     />
     <title>WebStudio</title>
   </head>
+  <!--  header -->
   <header class="header">
+    
     <div class="container header-container">
        <nav class="navigation">
       <a class="logo-nav" href="./index.html">Web<span class="logo-studio-nav">Studio</span></a>
