--- a/index.html
+++ b/index.html
@@ -124,42 +124,60 @@
       <h2 class="portfolio-name">Our Portfolio</h2>
     <ul class="portfolio-list">
       <li class="portfolio-item">
-        <img class="portfolio-img"  src="./images/img-5.jpg" alt="Banking App">
+        <img class="portfolio-img"  src="./images/img-5.jpg" 
+        width="360px"
+        height="300px"
+        alt="Banking App">
         <div class="cards"> 
           <h3  class="portfolio-list-name">Banking App</h3>
         <p class="portfolio-list-text">App</p>
       </div>
       </li>
       <li class="portfolio-item">
-        <img class="portfolio-img" src="./images/img-6.jpg" alt="Cashless Payment">
+        <img class="portfolio-img" src="./images/img-6.jpg"  
+        width="360px"
+        height="300px"
+        alt="Cashless Payment">
         <div class="cards">
           <h3 class="portfolio-list-name">Cashless Payment</h3>
         <p class="portfolio-list-text">Marketing</p>
       </div>
       </li>
       <li class="portfolio-item">
-        <img class="portfolio-img"  src="./images/img-7.jpg" alt="Meditation App">
+        <img class="portfolio-img"  src="./images/img-7.jpg" 
+        width="360px"
+        height="300px"
+        alt="Meditation App">
         <div class="cards">
           <h3 class="portfolio-list-name">Meditation App</h3>
         <p class="portfolio-list-text">App</p>
       </div>
       </li>
       <li class="portfolio-item">
-        <img class="portfolio-img" src="./images/img-8.jpg" alt="Taxi Service">
+        <img class="portfolio-img" src="./images/img-8.jpg" 
+        width="360px"
+        height="300px"
+        alt="Taxi Service">
         <div class="cards"> 
           <h3 class="portfolio-list-name">Taxi Service</h3>
         <p class="portfolio-list-text">Marketing</p>
       </div>
       </li>
       <li class="portfolio-item">
-        <img class="portfolio-img" src="./images/img-9.jpg" alt="Screen Illustrations">
+        <img class="portfolio-img" src="./images/img-9.jpg"  
+        width="360px"
+        height="300px"
+        alt="Screen Illustrations">
         <div class="cards">
           <h3 class="portfolio-list-name">Screen Illustrations</h3>
         <p class="portfolio-list-text">Design</p>
       </div>
       </li>
       <li class="portfolio-item">
-        <img class="portfolio-img" src="./images/img-10.jpg" alt="Online Courses">
+        <img class="portfolio-img" src="./images/img-10.jpg" 
+        width="360px"
+        height="300px"
+        alt="Online Courses">
         <div class="cards">
         <h3 class="portfolio-list-name">Online Courses</h3>
         <p class="portfolio-list-text">Marketing</p>
