--- a/index.html
+++ b/index.html
@@ -83,32 +83,32 @@
       <ul class="team-list">
         <li class="team-item">
           <img class="team-img"src="./images/img.jpg" alt="Mark Guerrero"
-          width="264px"
-          height="260px">
+          width="264"
+          height="260">
            <div class="team-container">
             <h3 class="team-list-name">Mark Guerrero</h3>
           <p class="team-text">Product Designer</p>
            </div>
         </li>
         <li class="team-item">
-          <img class="team-img" src="./images/img-2.jpg" alt="Tom Ford"  width="264px"
-          height="260px">
+          <img class="team-img" src="./images/img-2.jpg" alt="Tom Ford"  width="264"
+          height="260">
            <div class="team-container">
         <h3 class="team-list-name">Tom Ford</h3>
           <p class="team-text">Frontend Developer</p>
           </div>
         </li>
         <li class="team-item">
-          <img class="team-img" src="./images/img-3.jpg" alt="Camila Garcia" width="264px"
-          height="260px"> 
+          <img class="team-img" src="./images/img-3.jpg" alt="Camila Garcia" width="264"
+          height="260"> 
           <div class="team-container">
         <h3 class="team-list-name">Camila Garcia</h3>
           <p class="team-text">Marketing</p>
           </div>
         </li>
         <li class="team-item">
-          <img class="team-img" src="./images/img-4.jpg" alt="Daniel Wilson" width="264px"
-          height="260px"> 
+          <img class="team-img" src="./images/img-4.jpg" alt="Daniel Wilson" width="264"
+          height="260"> 
           <div class="team-container">
        <h3 class="team-list-name">Daniel Wilson</h3>
           <p class="team-text">UI Designer</p>
@@ -124,8 +124,8 @@
     <ul class="portfolio-list">
       <li class="portfolio-item">
         <img class="portfolio-img"  src="./images/img-5.jpg" 
-        width="360px"
-        height="300px"
+        width="360"
+        height="300"
         alt="Banking App">
         <div class="cards"> 
           <h3  class="portfolio-list-name">Banking App</h3>
@@ -134,8 +134,8 @@
       </li>
       <li class="portfolio-item">
         <img class="portfolio-img" src="./images/img-6.jpg"  
-        width="360px"
-        height="300px"
+        width="360"
+        height="300"
         alt="Cashless Payment">
         <div class="cards">
           <h3 class="portfolio-list-name">Cashless Payment</h3>
@@ -144,8 +144,8 @@
       </li>
       <li class="portfolio-item">
         <img class="portfolio-img"  src="./images/img-7.jpg" 
-        width="360px"
-        height="300px"
+        width="360"
+        height="300"
         alt="Meditation App">
         <div class="cards">
           <h3 class="portfolio-list-name">Meditation App</h3>
@@ -154,8 +154,8 @@
       </li>
       <li class="portfolio-item">
         <img class="portfolio-img" src="./images/img-8.jpg" 
-        width="360px"
-        height="300px"
+        width="360"
+        height="300"
         alt="Taxi Service">
         <div class="cards"> 
           <h3 class="portfolio-list-name">Taxi Service</h3>
@@ -164,8 +164,8 @@
       </li>
       <li class="portfolio-item">
         <img class="portfolio-img" src="./images/img-9.jpg"  
-        width="360px"
-        height="300px"
+        width="360"
+        height="300"
         alt="Screen Illustrations">
         <div class="cards">
           <h3 class="portfolio-list-name">Screen Illustrations</h3>
@@ -174,8 +174,8 @@
       </li>
       <li class="portfolio-item">
         <img class="portfolio-img" src="./images/img-10.jpg" 
-        width="360px"
-        height="300px"
+        width="360"
+        height="300"
         alt="Online Courses">
         <div class="cards">
         <h3 class="portfolio-list-name">Online Courses</h3>
